--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <base href='/'>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE11" />
-    <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/8-512.png" />
-    <link rel="icon" type="image/png" href="./assets/img/8-512.png"/>
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/icons/jkf-icon.png" />
+    <link rel="icon" type="image/png" href="./assets/icons/jkf-icon.png"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -19,7 +19,7 @@
     <!-- <link rel="stylesheet" href="https://npmcdn.com/angular2-toaster@5.0.0/toaster.css" />
     <link rel="stylesheet" href="/node_modules/angular2-toaster/toaster.css" /> -->
        
-    <title>Messaging&trade;</title>
+    <title>JKF&trade;</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
